# pomodoroz

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.pt.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.pt-BR.md  RETOMADA.example.md  RETOMADA.md  electron-builder.config.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pomodoroz-tasks-2026-04-20.json  tsconfig.json
.github/workflows/: ci.yml  release-autoupdate.yml  release-tauri-updater.yml
.husky/: pre-commit
.playwright-mcp/: page-2026-05-11T14-42-18-350Z.yml
app/electron/: jest.config.js  package.json  tsconfig.json
app/renderer/: eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
docs/: DECISOES_TECNICAS_2026.en.md  DECISOES_TECNICAS_2026.md  DECISOES_TECNICAS_2026.pt-BR.md  IMPROVEMENTS.md  LANGUAGE_EXPANSION_GUIDE.md  MIGRATION_ELECTRON_TO_TAURI.md  MIGRATION_TO_TAURI.md  PRODUCT_BACKLOG.md  RELEASE_OPERATIONS.md  TECHNICAL_DECISIONS_2026.md  VERSIONS.md
scripts/: check-updates.ps1  check-updates.sh  check_rust.sh  check_rust_2.sh  dev-app.mjs  dev-full.sh  dev.sh  install.ps1  install.sh  pnpmw.mjs  release.ps1  release.sh  uninstall.ps1  uninstall.sh  validar-tudo.ps1  validar-tudo.sh  version-sync.mjs  version.ps1  version.sh
src/: App.tsx  config.ts  index.tsx  typings.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/packaging/linux/: desktop-template.hbs
src-tauri/src/: constants.rs  lib.rs
src-tauri/src/commands/: mod.rs  window_bridge.rs
(+234 files in other folders)
