[package]
name = "pomodoroz_tauri"
version = "26.4.33"
description = "Pomodoroz desktop app (Tauri runtime scaffold)"
authors = ["Carlos Duarte <cjdduarte@gmail.com>"]
license = "MIT"
repository = "https://github.com/cjdduarte/pomodoroz"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-opener = "=2.5.3"
tauri-plugin-global-shortcut = "=2.3.1"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-single-instance = "=2.4.1"
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-os = "=2.3.2"
rodio = { version = "=0.22.2", default-features = false, features = ["playback", "wav"] }
tauri-plugin-updater = "=2.10.1"
